<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.frank.myapplication.MainActivity"
    android:orientation="vertical"
    android:background="@color/colorAmarillo"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="139dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/dia" />

        <TextView
            android:id="@+id/tx_fecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="TextView"
            android:textColor="@android:color/background_dark"
            android:textSize="40sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="185dp"
        android:orientation="vertical"
        android:layout_weight="0.37">

        <TextView
            android:id="@+id/tv1"
            android:layout_width="match_parent"
            android:layout_height="13dp"
            android:layout_gravity="center_horizontal"
            android:background="@android:drawable/toast_frame"
            android:text=" #-# "
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="46sp"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv1"
            android:layout_width="match_parent"
            android:layout_height="94dp"
            android:layout_weight="0.60"
            app:srcCompat="@drawable/a" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/horario"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/su_placa"
            android:textColor="@android:color/background_dark"
            android:textSize="38sp" />

        <TextView
            android:id="@+id/tv_placa"
            android:layout_width="76dp"
            android:layout_height="wrap_content"
            android:text='" - "'
            android:textColor="@android:color/background_dark"
            android:textSize="36sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/mini" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_weight="0.35"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tx4"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="HOY NO TIENES PICO"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/proximo"
            android:textColor="@android:color/background_dark"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_proximo_dia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="TextView"
            android:textColor="@android:color/background_dark"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="17dp"
        android:layout_weight="0.70"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button"
            android:layout_width="198dp"
            android:layout_height="wrap_content"
            android:onClick="configuracion"
            android:text="@string/configuracion" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="acercaDe"
            android:text="@string/acerca_de" />

    </LinearLayout>

</LinearLayout>
